--- a/11.1-HerenciadeTemplates.md
+++ b/11.1-HerenciadeTemplates.md
@@ -1,1 +1,103 @@
 # 🎯 Herencia de Templates
+La herencia de templates es una técnica en Django que permite reutilizar código HTML para mantener una estructura consistente en varias páginas web. Este método se basa en definir un template "padre" que contiene elementos comunes a todas las páginas (como la barra de navegación, el pie de página, y el logo), y luego extender ese template en los templates "hijos" que heredan y pueden modificar su contenido específico.
+
+## ¿Cómo definir un template "padre"?
+- **Crear el Template Padre**: El primer paso es crear un archivo HTML que actuará como el template base. Este archivo incluirá las partes de la página web que serán comunes a todas las páginas.
+    - **Ejemplo** de `padre.html`:
+    ```html 
+    <!DOCTYPE html> 
+    <html lang="en"> 
+        <head> 
+            <meta charset="UTF-8"> 
+            <title>{% block title %}My Site{% endblock %}</title> 
+        </head> 
+        
+        <body> 
+            <header> 
+                <nav> 
+                    <ul> 
+                        <li><a href="{% url 'inicio' %}">Inicio</a></li> 
+                        <li><a href="{% url 'cursos' %}">Cursos</a></li> 
+                        <li><a href="{% url 'contacto' %}">Contacto</a></li> 
+                    </ul> 
+                </nav> 
+            </header> 
+            <main> 
+                {% block content %} 
+                    <!-- Contenido específico de cada página irá aquí --> 
+                {% endblock %} 
+            </main> 
+            <footer> 
+                <p>&copy; 2024 My Site</p> 
+            </footer> 
+        </body> 
+    </html>
+    ```
+
+    - **Definir Bloques**:
+        - Dentro del template padre, se definen bloques usando la sintaxis `{% block nombre_del_bloque %}{% endblock %}`. Estos bloques pueden ser reemplazados o extendidos en los templates hijos.
+        - En el ejemplo anterior, `title` y `content` son bloques que los templates hijos pueden modificar.
+
+- **¿Cómo extender un template "padre" en un template "hijo"?**
+    - **Crear el Template Hijo**:
+        - Los templates hijos extienden el template padre usando la directiva `{% extends 'ruta/al/template/padre.html' %}`.
+        - Luego, definen el contenido específico para los bloques que se desea modificar.
+        - Ejemplo de `hijo.html`:
+        ```html 
+        {% extends 'padre.html' %} 
+        {% block title %}Página de Cursos{% endblock %} 
+        {% block content %} 
+            <h1>Bienvenido a la página de cursos</h1> 
+            <p>Aquí encontrarás todos los cursos disponibles.</p> 
+        {% endblock %}
+        ```
+    - **Beneficios de la Herencia de Templates**:
+        - **Consistencia**: Asegura que todos los templates compartan un diseño común, lo que facilita la actualización y el mantenimiento del sitio web.
+        - **Reutilización de Código**: Evita la duplicación de código, ya que los elementos comunes se definen una vez en el template padre.
+        - **Flexibilidad**: Permite que cada página web tenga contenido específico mientras mantiene la estructura general del sitio.
+
+- **Ejemplo Completo**:
+    - Template Padre (`padre.html`): 
+    ```html 
+    <!DOCTYPE html> 
+    <html lang="en"> 
+        <head> 
+            <meta charset="UTF-8"> 
+            <title>{% block title %}My Site{% endblock %}</title> 
+        </head> 
+        
+        <body> 
+            <header> 
+                <nav> 
+                    <ul> 
+                        <li><a href="{% url 'inicio' %}">Inicio</a></li> 
+                        <li><a href="{% url 'cursos' %}">Cursos</a></li> 
+                        <li><a href="{% url 'contacto' %}">Contacto</a></li> 
+                    </ul> 
+                </nav> 
+            </header> 
+            
+            <main> 
+                {% block content %} 
+                    <!-- Contenido específico de cada página irá aquí --> 
+                {% endblock %} 
+            </main> 
+
+            <footer> 
+                <p>&copy; 2024 My Site</p> 
+            </footer> 
+        </body> 
+    </html>
+    ```
+
+    - Template Hijo (`hijo.html`): 
+    ```html 
+    {% extends 'padre.html' %} 
+    {% block title %}Página de Cursos{% endblock %} 
+    {% block content %} 
+        <h1>Bienvenido a la página de cursos</h1> 
+        <p>Aquí encontrarás todos los cursos disponibles.</p> 
+    {% endblock %}
+    ```
+
+👉 La herencia de templates en Django es una herramienta poderosa que simplifica la gestión y el mantenimiento de sitios web, permitiendo una estructura coherente y un diseño uniforme en todas las páginas.
