--- a/11.1-HerenciadeTemplates.md
+++ b/11.1-HerenciadeTemplates.md
@@ -101,3 +101,124 @@ La herencia de templates es una técnica en Django que permite reutilizar códig
     ```
 
 👉 La herencia de templates en Django es una herramienta poderosa que simplifica la gestión y el mantenimiento de sitios web, permitiendo una estructura coherente y un diseño uniforme en todas las páginas.
+
+## Navegar entre Templates
+Creación del Menú de Navegación en el Template Padre
+
+- **Definir el Template Padre**:
+    - El primer paso es crear un archivo HTML que actuará como el template base para nuestro sitio web. Este archivo incluirá el menú de navegación que será común a todas las páginas.
+    - Ejemplo de `padre.html`:
+    ```html 
+    <!DOCTYPE html> 
+        <html lang="en"> 
+            <head> 
+                <meta charset="UTF-8"> 
+                <title>{% block title %}My Site{% endblock %}</title> 
+                <link rel="stylesheet" href="{% static 'css/styles.css' %}"> 
+            </head> 
+                <body> 
+                    <header> 
+                        <nav class="navbar navbar-light bg-light static-top"> 
+                                <div class="container"> 
+                                    <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a> 
+                                    <a class="navbar-brand" href="{% url 'cursos' %}">Cursos</a> 
+                                    <a class="navbar-brand" href="{% url 'profesores' %}">Profesores</a> 
+                                    <a class="navbar-brand" href="{% url 'estudiantes' %}">Estudiantes</a> 
+                                    <a class="navbar-brand" href="{% url 'entregables' %}">Entregables</a> 
+                                    <a class="btn btn-primary" href="#NADAAUN">INICIAR</a> 
+                                </div> 
+                        </nav> 
+                    </header> 
+                    <main> 
+                        {% block content %} 
+                            <!-- Contenido específico de cada página irá aquí --> 
+                        {% endblock %} 
+                    </main> 
+                    <footer> 
+                        <p>&copy; 2024 My Site</p> 
+                    </footer> 
+                </body> 
+            </html>
+    ```
+
+- **Ajuste de los Templates Hijos para Utilizar el Menú**
+    - Extender el Template Padre
+        - Los templates hijos extienden el template padre usando la directiva `{% extends 'ruta/al/template/padre.html' %}`.
+        - Luego, definen el contenido específico para los bloques que se desea modificar.
+        - Ejemplo de `cursos.html`:
+        ```html 
+        {% extends 'padre.html' %} 
+        {% block title %}Página de Cursos{% endblock %} 
+        {% block content %} 
+            <h1>Bienvenido a la página de cursos</h1> 
+            <p>Aquí encontrarás todos los cursos disponibles.</p> 
+        {% endblock %}
+        ```
+    
+- **Eliminar Contenido Redundante**:
+    - En los templates hijos, se elimina cualquier código HTML redundante que ya esté presente en el template padre.
+    - Se asegura que solo se modifique el contenido específico dentro de los bloques definidos.
+    - Ejemplo Completo:
+        - Template Padre `(padre.html)`:
+        ```html
+        <!DOCTYPE html> 
+        <html lang="en"> 
+            <head> 
+                <meta charset="UTF-8"> 
+                <title>{% block title %}My Site{% endblock %}</title> 
+                <link rel="stylesheet" href="{% static 'css/styles.css' %}"> 
+            </head> 
+            <body> 
+                <header> 
+                    <nav class="navbar navbar-light bg-light static-top"> 
+                        <div class="container"> 
+                            <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a> 
+                            <a class="navbar-brand" href="{% url 'cursos' %}">Cursos</a> 
+                            <a class="navbar-brand" href="{% url 'profesores' %}">Profesores</a> 
+                            <a class="navbar-brand" href="{% url 'estudiantes' %}">Estudiantes</a> 
+                            <a class="navbar-brand" href="{% url 'entregables' %}">Entregables</a> 
+                            <a class="btn btn-primary" href="#NADAAUN">INICIAR</a> 
+                        </div> 
+                    </nav> 
+                </header> 
+                <main> 
+                    {% block content %} 
+                        <!-- Contenido específico de cada página irá aquí --> 
+                    {% endblock %} 
+                </main> 
+                <footer> 
+                    <p>&copy; 2024 My Site</p> 
+                </footer> 
+            </body> 
+        </html>
+        ```
+        - Template Hijo (`cursos.html`)
+        ```html 
+        {% extends 'padre.html' %} 
+        {% block title %}Página de Cursos{% endblock %} 
+        {% block content %} 
+            <h1>Bienvenido a la página de cursos</h1> 
+            <p>Aquí encontrarás todos los cursos disponibles.</p> 
+        {% endblock %}
+        ```
+
+        - Navegación entre Templates:
+            - Para asegurarse de que el menú de navegación funcione correctamente, es importante definir las URLs correspondientes en el archivo `urls.py` de Django.
+            - Ejemplo de configuración en `urls.py`: 
+            ```python 
+            from django.urls import path 
+            from AppCoder import views 
+            urlpatterns = [ 
+                path('', views.inicio, name="Inicio"), 
+                path('cursos/', views.cursos, name="Cursos"), 
+                path('profesores/', views.profesores, name="Profesores"), 
+                path('estudiantes/', views.estudiantes, name="Estudiantes"), 
+                path('entregables/', views.entregables, name="Entregables"), 
+            ]
+            ```
+        - Beneficios de Navegar entre Templates:
+            - **Consistencia**: Mantiene un diseño uniforme en todas las páginas web.
+            - **Facilidad de Mantenimiento**: Permite actualizar el menú de navegación en un solo lugar (el template padre) en lugar de hacerlo en cada página individualmente.
+            - **Modularidad**: Facilita la creación y gestión de contenido dinámico específico para cada página mientras se mantiene una estructura común.
+
+👉 Con estos pasos, se logra crear un menú de navegación en el template padre y ajustar los templates hijos para utilizar este menú, garantizando una navegación coherente y eficiente en todo el sitio web.
