--- a/11.3-FormulariosenDjango.md
+++ b/11.3-FormulariosenDjango.md
@@ -89,3 +89,271 @@ Los formularios en Django son una herramienta fundamental para interactuar con l
     ```
 
 ## Procesamiento de Datos en la Vista
+- **Manejo del Método POST**:
+    - En la vista, se verifica si la solicitud es de tipo POST y se procesa el formulario.
+    - Ejemplo de manejo del método POST en la vista:
+    ```python 
+    if request.method == 'POST': 
+        form = CursoFormulario(request.POST) 
+        if form.is_valid(): 
+            nombre = form.cleaned_data['nombre'] 
+            camada = form.cleaned_data['camada'] 
+            # Guardar los datos en la base de datos 
+            curso = Curso(nombre=nombre, camada=camada) 
+            curso.save() 
+            return render(request, 'AppCoder/curso_exito.html')   
+    ```
+- **Manejo del Método GET**:
+    - Si la solicitud es de tipo GET, simplemente se renderiza el formulario vacío.
+    - Ejemplo de manejo del método GET en la vista:
+    ```python 
+        else: form = CursoFormulario() 
+        return render(request, 'AppCoder/curso_formulario.html', {'form': form}) 
+
+## Validación de Formularios
+- Django proporciona mecanismos integrados para la validación de formularios.
+- Al llamar a `form.is_valid()`, Django verifica que todos los datos del formulario sean válidos según las reglas definidas en el formulario.
+- Los datos limpios se pueden acceder mediante `form.cleaned_data`.
+
+## Ejemplo Completo de Formulario
+- **Definición del Formulario** (`forms.py`): 
+```python 
+from django import forms 
+class CursoFormulario(forms.Form): 
+    nombre = forms.CharField(max_length=100) 
+    camada = forms.IntegerField()
+```
+
+- **Definición de la Vista** (`views.py`): 
+```python 
+from django.shortcuts import render 
+from .forms import CursoFormulario 
+
+def cursoFormulario(request): 
+    if request.method == 'POST': 
+        form = CursoFormulario(request.POST) 
+
+        if form.is_valid(): 
+            nombre = form.cleaned_data['nombre'] 
+            camada = form.cleaned_data['camada'] 
+            # Guardar los datos en la base de datos 
+            curso = Curso(nombre=nombre, camada=camada) 
+            curso.save() 
+            return render(request, 'AppCoder/curso_exito.html') 
+        
+        else: 
+            form = CursoFormulario() 
+            return render(request, 'AppCoder/curso_formulario.html', {'form': form})
+```
+
+- **Definición de la URL** (`urls.py`): 
+```python 
+from django.urls import path 
+from . import views 
+
+urlpatterns = [ path('cursoFormulario/', views.cursoFormulario, name='cursoFormulario'), ]
+```
+
+- **Creación del Template** (`curso_formulario.html`): 
+```html 
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="UTF-8"> 
+        <title>Formulario - Agregar Curso</title> 
+    </head> 
+    <body> 
+        <h1>Agregar Curso</h1> 
+        <form action="/cursoFormulario/" method="post"> 
+            {% csrf_token %} {{ form.as_p }} 
+            <button type="submit">Enviar</button> 
+        </form> 
+    </body> 
+</html>
+```
+
+👉 Con estos pasos, podrás crear y manejar formularios en Django de manera eficiente, permitiendo a los usuarios interactuar con los datos de tu aplicación web de manera sencilla y segura.
+
+## Búsqueda con Formularios
+Los formularios de búsqueda en Django permiten a los usuarios consultar datos almacenados en la base de datos de manera eficiente. A continuación, se presenta una guía detallada sobre cómo crear y manejar formularios de búsqueda en Django.
+
+### Creación de Formularios de Búsqueda en Django
+- **Definición del Formulario de Búsqueda**:
+    - Primero, define un formulario que recibirá los parámetros de búsqueda.
+    - Ejemplo de un formulario de búsqueda de cursos (`forms.py`):
+    ```python 
+    from django import forms 
+    class BusquedaCursoFormulario(forms.Form): 
+        camada = forms.IntegerField(label='Camada')
+    ```
+- **Creación de la Vista para Manejar el Formulario de Búsqueda**:
+    - Define una vista que maneje tanto las solicitudes GET como POST para el formulario de búsqueda.
+    - Ejemplo de vista para manejar el formulario de búsqueda de cursos (views.py):
+    ```python 
+    from django.shortcuts import render 
+    from .forms import BusquedaCursoFormulario 
+    from .models import Curso 
+    
+    def buscarCurso(request): 
+        if request.method == 'GET': 
+            form = BusquedaCursoFormulario(request.GET) 
+            if form.is_valid(): 
+                camada = form.cleaned_data['camada'] 
+                resultados = Curso.objects.filter(camada=camada) 
+                return render(request, 'AppCoder/resultados_busqueda.html', {'resultados': resultados, 'form': form}) 
+            else: 
+                form = BusquedaCursoFormulario() 
+                return render(request, 'AppCoder/buscar_curso.html', {'form': form})
+    ```
+
+- **Definición de la URL para la Búsqueda**:
+    - Registra la vista en el archivo urls.py para que sea accesible desde una URL.
+    - Ejemplo de configuración de la URL (`urls.py`):
+    ```python 
+    from django.urls import path 
+    from . import views 
+    
+    urlpatterns = [ path('buscarCurso/', views.buscarCurso, name='buscarCurso'), ]
+    ```
+
+- **Creación del Template para el Formulario de Búsqueda**:
+    - Crea una plantilla HTML que renderice el formulario de búsqueda.
+    - Ejemplo de plantilla (`buscar_curso.html`):
+    ```html 
+    <!DOCTYPE html> 
+    <html lang="en"> 
+        <head> 
+            <meta charset="UTF-8"> 
+            <title>Buscar Curso</title> 
+        </head> 
+        <body> 
+            <h1>Buscar Curso por Camada</h1> 
+            <form method="get" action="{% url 'buscarCurso' %}"> 
+                {{ form.as_p }} 
+                <button type="submit">Buscar</button> 
+            </form> 
+        </body> 
+    </html>
+    ```
+
+- **Creación del Template para Mostrar Resultados**:
+    - Crea una plantilla HTML que muestre los resultados de la búsqueda.
+    - Ejemplo de plantilla (`resultados_busqueda.html`):
+    ```html 
+    <!DOCTYPE html> 
+    <html lang="en"> 
+        <head> 
+            <meta charset="UTF-8"> 
+            <title>Resultados de Búsqueda</title> 
+        </head> 
+        
+        <body> 
+            <h1>Resultados de Búsqueda</h1> 
+                {% if resultados %} 
+                    <ul> {% for curso in resultados %} 
+                        <li>{{ curso.nombre }} - Camada: {{ curso.camada }}</li> 
+                    {% endfor %} 
+                    </ul> 
+                {% else %} 
+                    <p>No se encontraron resultados para la camada especificada.</p> 
+                {% endif %} 
+            <a href="{% url 'buscarCurso' %}">Nueva Búsqueda</a> 
+        </body> 
+    </html>
+    ```
+
+### Funcionamiento del Formulario de Búsqueda
+- **Método GET para Búsqueda**:
+    - El método GET se utiliza para solicitar datos del servidor. En el contexto de formularios de búsqueda, GET se usa para enviar los parámetros de búsqueda.
+    - Ejemplo de formulario que usa GET:
+    ```html 
+    <form method="get" action="{% url 'buscarCurso' %}"> 
+        {{ form.as_p }}     
+        <button type="submit">Buscar</button> 
+    </form>
+    ```
+- **Procesamiento de Datos en la Vista**:
+    - La vista verifica si la solicitud es de tipo GET y procesa el formulario.
+    - Ejemplo de manejo del método GET en la vista (`views.py`):
+    ```python 
+    if request.method == 'GET': 
+        form = BusquedaCursoFormulario(request.GET) 
+        if form.is_valid(): 
+            camada = form.cleaned_data['camada'] 
+            resultados = Curso.objects.filter(camada=camada) 
+            return render(request, 'AppCoder/resultados_busqueda.html', {'resultados': resultados, 'form': form}) 
+        else: 
+            form = BusquedaCursoFormulario() 
+            return render(request, 'AppCoder/buscar_curso.html', {'form': form})
+    ```
+
+### Ejemplo Completo de Búsqueda con Formularios
+- **Definición del Formulario** (`forms.py`): 
+```python 
+from django import forms
+
+class BusquedaCursoFormulario(forms.Form): 
+    camada = forms.IntegerField(label='Camada')
+```
+- **Definición de la Vista** (`views.py`): 
+```python 
+from django.shortcuts import render 
+from .forms import BusquedaCursoFormulario 
+from .models import Curso 
+
+def buscarCurso(request): 
+    if request.method == 'GET': 
+        form = BusquedaCursoFormulario(request.GET) 
+        if form.is_valid(): 
+            camada = form.cleaned_data['camada'] 
+            resultados = Curso.objects.filter(camada=camada) 
+            return render(request, 'AppCoder/resultados_busqueda.html', {'resultados': resultados, 'form': form}) 
+        else: 
+            form = BusquedaCursoFormulario() 
+            return render(request, 'AppCoder/buscar_curso.html', {'form': form})
+```
+
+- Creación del Template para el Formulario de Búsqueda (`buscar_curso.html`): 
+```html 
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="UTF-8"> 
+        <title>Buscar Curso</title> 
+    </head> 
+    
+    <body> 
+        <h1>Buscar Curso por Camada</h1> 
+        <form method="get" action="{% url 'buscarCurso' %}"> 
+            {{ form.as_p }} 
+            <button type="submit">Buscar</button> 
+        </form> 
+    </body> 
+</html>
+```
+
+- **Creación del Template para Mostrar Resultados** (`resultados_busqueda.html`): 
+```html 
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="UTF-8"> 
+        <title>Resultados de Búsqueda</title> 
+    </head> 
+    <body> 
+        <h1>Resultados de Búsqueda</h1> 
+            {% if resultados %} 
+            <ul> 
+                {% for curso in resultados %} 
+                <li>{{ curso.nombre }} - Camada: {{ curso.camada }}</li> 
+                {% endfor %}
+            </ul> 
+            {% else %} 
+                <p>No se encontraron resultados para la camada especificada.</p> 
+            {% endif %} 
+            <a href="{% url 'buscarCurso' %}">Nueva Búsqueda</a> 
+        </body> 
+    </html>
+```
+
+👉 Con estos pasos, podrás crear y manejar formularios de búsqueda en Django, permitiendo a los usuarios consultar datos en la base de datos de manera eficiente y obtener los resultados deseados.
