--- a/11.3-FormulariosenDjango.md
+++ b/11.3-FormulariosenDjango.md
@@ -313,7 +313,7 @@ def buscarCurso(request):
             return render(request, 'AppCoder/buscar_curso.html', {'form': form})
 ```
 
-- Creación del Template para el Formulario de Búsqueda (`buscar_curso.html`): 
+- **Creación del Template para el Formulario de Búsqueda** (`buscar_curso.html`): 
 ```html 
 <!DOCTYPE html> 
 <html lang="en"> 
